--- a/index.html
+++ b/index.html
@@ -8,5 +8,33 @@
 </html>
 
 <body>
-    <header></header>
+    <!-- Navigation tags -->
+    <header>
+        <h1>John Halley</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="About me">About Me</a>
+                </li>
+                <li>
+                    <a href="#Work">Work</a>
+                </li>
+                <li>
+                    <a href="#Contact">Contact</a>
+                </li>
+                <li>
+                    <a href="#Resume">Resume</a>          
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Navigation ends -->
+
+    <!-- Hero Starts -->
+
 </body>
+    <section>
+        <div>
+            
+        </div>
+    </section>
