more html skeleton

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="About me">About Me</a>
+                    <a href="#About Me">About Me</a>
                 </li>
                 <li>
                     <a href="#Work">Work</a>
@@ -33,8 +33,35 @@
     <!-- Hero Starts -->
 
 </body>
-    <section>
+    <section class="hero">
         <div>
-            
+            <!-- Include image of yourself -->
+            <h2>Add Subtitle</h2>
         </div>
+    </section>
+
+    <!-- End of Hero -->
+
+    <section id="About Me">
+        <div>
+            <h2>About Me</h2>
+            <p>Add your about me</p>
+        </div>
+    </section>
+
+    <section id="Work">
+        <h2>Work</h2>
+    </section>
+
+    <section id="Contact">
+        <h2>Contact</h2>
+        <address>
+            608.220.2161<br/>
+            <a href="jhalley230@gmail.com">jhalley230@gmail.com</a> <br/>
+            <a href="https://github.com/Halleys-Comet">GitHub</a>
+          </address>
+    </section>
+
+    <section id="Resume">
+
     </section>
