--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Halleys-Comet</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-</html>
+
 
 <body>
     <!-- Navigation tags -->
@@ -22,9 +22,6 @@
                 <li>
                     <a href="#Contact">Contact</a>
                 </li>
-                <li>
-                    <a href="#Resume">Resume</a>          
-                </li>
             </ul>
         </nav>
     </header>
@@ -32,36 +29,52 @@
 
     <!-- Hero Starts -->
 
-</body>
+
     <section class="hero">
-        <div>
-            <!-- Include image of yourself -->
+        <div class="hero-info">
             <h2>Add Subtitle</h2>
         </div>
     </section>
 
     <!-- End of Hero -->
 
-    <section id="About Me">
-        <div>
+    <!-- About me and work sections -->
+
+<section>
+    <article id="About Me" class="section-start">
+        <div class="section-title">
             <h2>About Me</h2>
-            <p>Add your about me</p>
+            <img src="./assets/images/me.jpg" alt="picture of myself" />
         </div>
-    </section>
+        <div class= "bio">
+            <p>My name is John Halley. I am currently an account at an engineering firm. I have enrolled in a coding bootcamp in order to
+                break into the world of tech. My goal is to become a full stack developer, so that I can help businesses find creative solutions
+                for any of the problems they may be experiencing. 
+            </p>
+        </div>
+    </article>
 
-    <section id="Work">
-        <h2>Work</h2>
-    </section>
+    <article id="Work" class="section-start">
+        <div class="section-title">
+            <h2>Work</h2>
+        </div>
+    </article>
 
-    <section id="Contact">
-        <h2>Contact</h2>
-        <address>
-            608.220.2161<br/>
-            <a href="jhalley230@gmail.com">jhalley230@gmail.com</a> <br/>
-            <a href="https://github.com/Halleys-Comet">GitHub</a>
+    <article id="Contact" class="section-start">
+        <div class="section-title">
+            <h2>Contact</h2>
+        </div>
+        <div class="reach-me">
+            <address>
+                <p>608.220.2161</p><br/>
+                <a href="jhalley230@gmail.com">jhalley230@gmail.com</a> <br/>
+                <a href="https://github.com/Halleys-Comet">GitHub</a>
           </address>
-    </section>
+        </div>
+    </article>
+</section>
 
-    <section id="Resume">
 
-    </section>
+ </body>
+
+</html>
