add portfolio work and clean up html and css

--- a/index.html
+++ b/index.html
@@ -32,21 +32,18 @@
 
     <section class="hero">
         <div class="hero-info">
-            <h2>Add Subtitle</h2>
+            "Go confidentily in the direction of your dream" 
         </div>
     </section>
 
     <!-- End of Hero -->
 
-    <!-- About me and work sections -->
+    <!-- About me section -->
 
 <section>
-    <article id="About Me" class="section-start">
-        <div class="section-title">
+    <article id="About Me" class="section-start section-me">
+        <div class="section-title profile-img">
             <h2>About Me</h2>
-            <img src="./assets/images/me.jpg" alt="picture of myself" />
-        </div>
-        <div class= "bio">
             <p>My name is John Halley. I am currently an account at an engineering firm. I have enrolled in a coding bootcamp in order to
                 break into the world of tech. My goal is to become a full stack developer, so that I can help businesses find creative solutions
                 for any of the problems they may be experiencing. 
@@ -54,23 +51,39 @@
         </div>
     </article>
 
-    <article id="Work" class="section-start">
-        <div class="section-title">
+    <!-- About me section ends -->
+
+    <!-- portfolio work -->
+
+    <article id="Work" class="section-start section-work">
+        <div class="section-title work-img">
             <h2>Work</h2>
+
+                        <a href="https://halleys-comet.github.io/Halleys-Comet.horiseon.io/">
+                         <img src="./assets/images/Horiseon.jpg" alt="Horiseon landing page" />
+                        </a>
+
+                        <a href="https://halleys-comet.github.io/run-buddy/">
+                            <img src="./assets/images/run-buddy.jpg" alt="Run-Buddy landing page" />
+                        </a>
+
+                        <img src="./assets/images/abandoned.jpg" alt="Abandoned building" />
+
+                        <img src="./assets/images/galaxy.jpg" alt="Night time sky" />
+
         </div>
+
     </article>
 
-    <article id="Contact" class="section-start">
+    <article id="Contact" class="section-start section-contact">
         <div class="section-title">
             <h2>Contact</h2>
-        </div>
-        <div class="reach-me">
             <address>
                 <p>608.220.2161</p><br/>
                 <a href="jhalley230@gmail.com">jhalley230@gmail.com</a> <br/>
                 <a href="https://github.com/Halleys-Comet">GitHub</a>
           </address>
-        </div>
+        </div>  
     </article>
 </section>
 
