--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <section>
     <article id="About Me" class="section-start section-me">
-        <div class="section-title profile-img">
-            <h2>About Me</h2>
+        <h2>About Me</h2>
+        <div>
             <p>My name is John Halley. I am currently an account at an engineering firm. I have enrolled in a coding bootcamp in order to
                 break into the world of tech. My goal is to become a full stack developer, so that I can help businesses find creative solutions
                 for any of the problems they may be experiencing. 
@@ -56,34 +56,29 @@
     <!-- portfolio work -->
 
     <article id="Work" class="section-start section-work">
-        <div class="section-title work-img">
-            <h2>Work</h2>
+        <h2>Work</h2>
+        <a href="https://halleys-comet.github.io/Halleys-Comet.horiseon.io/">
+        <img src="./assets/images/Horiseon.jpg" alt="Horiseon landing page" />
+        </a> 
 
-                        <a href="https://halleys-comet.github.io/Halleys-Comet.horiseon.io/">
-                         <img src="./assets/images/Horiseon.jpg" alt="Horiseon landing page" />
-                        </a>
+        <a href="https://halleys-comet.github.io/run-buddy/">
+        <img src="./assets/images/run-buddy.jpg" alt="Run-Buddy landing page" />
+        </a>
 
-                        <a href="https://halleys-comet.github.io/run-buddy/">
-                            <img src="./assets/images/run-buddy.jpg" alt="Run-Buddy landing page" />
-                        </a>
+        <img src="./assets/images/abandoned.jpg" alt="Abandoned building" />
 
-                        <img src="./assets/images/abandoned.jpg" alt="Abandoned building" />
-
-                        <img src="./assets/images/galaxy.jpg" alt="Night time sky" />
-
-        </div>
+        <img src="./assets/images/galaxy.jpg" alt="Night time sky" />
 
     </article>
 
+<!-- portfolio work end -->
+
     <article id="Contact" class="section-start section-contact">
-        <div class="section-title">
-            <h2>Contact</h2>
-            <address>
+        <h2>Contact</h2>
                 <p>608.220.2161</p><br/>
                 <a href="jhalley230@gmail.com">jhalley230@gmail.com</a> <br/>
                 <a href="https://github.com/Halleys-Comet">GitHub</a>
-          </address>
-        </div>  
+            </div>  
     </article>
 </section>
 
